@@ -3,7 +3,6 @@ package no.ntnu.trygvew.messingAround.encryption;
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 import java.util.Base64;
 
 
@@ -28,11 +27,14 @@ public class AES {
      */
     public static String encrypt(String encryptionKey, String nonce, String value){
         try {
-            Base64.Decoder decoder = Base64.getUrlDecoder();
+            System.out.println("nonc " + nonce.length());
+            System.out.println("noncb " + nonce.getBytes().length);
+            System.out.println("pass " + encryptionKey.length());
+            System.out.println("noncb " + nonce.getBytes().length);
             // makes a initialization vector form the provided nonsensical value
-            IvParameterSpec initVector = new IvParameterSpec(decoder.decode(nonce));
+            IvParameterSpec initVector = new IvParameterSpec(nonce.getBytes("UTF-8"));
             // makes an encryption key for the AES algorithm form the provided key
-            SecretKeySpec secretKeySpec = new SecretKeySpec(decoder.decode(encryptionKey), encryptionAlgorithm);
+            SecretKeySpec secretKeySpec = new SecretKeySpec(encryptionKey.getBytes("UTF-8"), encryptionAlgorithm);
 
             // defines the encryption algorithm for the cipher(which is an old word for cryptographic algorithm)
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
@@ -43,7 +45,7 @@ public class AES {
             byte[] encrypted = cipher.doFinal(value.getBytes());
 
 
-            return DatatypeConverter.printBase64Binary(encrypted);
+            return Base64.getUrlEncoder().withoutPadding().encodeToString(encrypted);
         }catch (Exception e) {
             e.printStackTrace();
         }
@@ -60,11 +62,10 @@ public class AES {
      */
     public static String decrypt(String encryptionKey, String nonce, String value){
         try {
-            Base64.Decoder decoder = Base64.getUrlDecoder();
             // makes a initialization vector form the provided nonsensical value
-            IvParameterSpec initVector = new IvParameterSpec(decoder.decode(nonce));
+            IvParameterSpec initVector = new IvParameterSpec(nonce.getBytes("UTF-8"));
             // makes an encryption key for the AES algorithm form the provided key
-            SecretKeySpec secretKeySpec = new SecretKeySpec(decoder.decode(encryptionKey), encryptionAlgorithm);
+            SecretKeySpec secretKeySpec = new SecretKeySpec(encryptionKey.getBytes("UTF-8"), encryptionAlgorithm);
 
             // defines the encryption algorithm for the cipher(which is an old word for cryptographic algorithm)
             Cipher cipher = Cipher.getInstance("AES/CBC/PKCS5PADDING");
@@ -72,7 +73,7 @@ public class AES {
             cipher.init(Cipher.DECRYPT_MODE, secretKeySpec, initVector);
 
             // encrypts the given value
-            byte[] decrypted = cipher.doFinal(DatatypeConverter.parseBase64Binary(value));
+            byte[] decrypted = cipher.doFinal(Base64.getUrlDecoder().decode(value));
 
 
             return new String(decrypted);
